--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Navbar starts here -->
     <nav class="navbar navbar-expand-lg  bg-dark text-white">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="#">Navbar</a>
+          <a class="navbar-brand text-white" href="#">NavbaR</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
